Fix action text not centered on non 5 rows

--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -12,11 +12,7 @@
 }
 
 /* Actions text centered */
-.rdt_TableCol:nth-child(5) div {
-  @apply flex justify-center;
-}
-
-.rdt_TableCol:nth-child(5) div div {
+.rdt_TableCol:last-child div {
   @apply flex justify-center;
 }
 
